[project]
name = "act"
version = "0.0.0"
description = "Automated Configuration Testing for CAPE Pulumi programs"
requires-python = ">=3.11"
dependencies = [
    "checkov>=3.1.47",
    "hypothesis>=6.100.0",
    "pulumi>=3.230.0",
    "pulumi-policy>=1.20.0",
]

[project.optional-dependencies]
fuzzing = ["atheris>=3.0.0"]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pulumi-cape",
    "pulumi-kubernetes>=4.28.0",
    "pulumi-random>=4.19.2",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
pulumi-cape = { path = "cape-sdks/python", editable = true }

[tool.black]
line-length = 120
target-version = ["py311"]
color = true

[tool.isort]
line_length = 120
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
pretty = true
show_traceback = true
color_output = true
exclude = [".git", "__pycache__", ".venv", "build", "dist", "tests/fixtures", "examples"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__", ".hypothesis", ".venv"]
addopts = ["--strict-markers", "--tb=short"]
markers = [
    "image_build: image-build pipeline validation (opt in via ACT_RUN_IMAGE_BUILD_TESTS=1)",
]
